# pcf

./: Cargo.toml  LICENSE  build.rs
benches/: combination.rs  permutation.rs  specific_pc.rs  threaded_combos.rs
examples/: countcombos.rs  first.rs  pco.rs  sixline.rs
examples/common/: mod.rs
src/: combination.rs  lib.rs  placeability.rs  solve.rs
