[package]
name = "pcf"
version = "0.1.0"
authors = ["MinusKelvin <mark.carlson@minuskelvin.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.5.1"
rayon = "1.3.0"

[dev-dependencies]
criterion = "0.3"
fumen = { git = "https://github.com/MinusKelvin/fumen-rs" }
rand = "0.7"

[[bench]]
name = "combination"
harness = false

[[bench]]
name = "permutation"
harness = false

[[bench]]
name = "specific_pc"
harness = false

[[bench]]
name = "threaded_combos"
harness = false
